[SC-10109] aligned right section, added updating of bankCode in userDropdown after changing of bankcode, fixed stucking of application because of infinite [ngStyle] execution

--- a/src/shared/common/layout/user-management-list/user-dropdown-menu/user-dropdown-menu.component.less
+++ b/src/shared/common/layout/user-management-list/user-dropdown-menu/user-dropdown-menu.component.less
@@ -61,6 +61,9 @@
             box-shadow: inset 2px 5px 12px 2px #43383b;
             .bank-code-section {
                 text-align: right;
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-end;
                 div {
                     text-transform: uppercase;
                     font-size: 14px;
